--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,11 @@
 {
   "name": "server",
-  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "tsnd src/server.ts"
   },
   "keywords": [],
   "author": "",
